src/component/ZiltagForm/index.css
.ziltag-ziltag-form {
  position: relative;
  display: flex;
  cursor: default;
  outline: none;
}

.ziltag-ziltag-form__link {
  font-size: 12px;
  cursor: pointer;
}

.ziltag-ziltag-form__link--activated {
  color: rgb(244, 70, 47);
}

.ziltag-ziltag-form__link[type='cancel'] {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: 14px;
  font-weight: 500;
  color: rgba(0, 0, 0, .87);
}

.ziltag-ziltag-form__submit {
  cursor: pointer;
}

.ziltag-ziltag-form__prompt {
  font-size: 12px;
  color: rgb(238, 46, 36);
}

.ziltag-ziltag-form__col0 {
  width: 226px;
}

.ziltag-ziltag-form__col1 {
  position: absolute;
  right: 0;
  height: 100%;
}

.ziltag-ziltag-form input {
  display: block;
  width: 195px;
  line-height: 30px;
  border: 0;
  outline: 0;
  border-bottom: 1px solid rgba(0, 0, 0, .26);
  margin-bottom: 8px;
  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
  font-size: 12px;
}

.ziltag-ziltag-form input[type='name'] {
  background: 0 50% url(username.png) no-repeat;
}

.ziltag-ziltag-form input[type='email'] {
  background: 0 50% url(email.png) no-repeat;
}

.ziltag-ziltag-form input[type='password'] {
  background: 0 50% url(password.png) no-repeat;
}

.ziltag-ziltag-form input[type='name'],
.ziltag-ziltag-form input[type='email'],
.ziltag-ziltag-form input[type='password'] {
  padding-left: 30px;
}

.ziltag-ziltag-form nav {
  width: 59px;
  height: 100%;
  line-height: 20px;
  border-left: 1px solid black;
  text-align: center;
}

.ziltag-ziltag-form footer h1 {
  display: inline-block;
  font-size: 14px;
  font-weight: 500;
  color: rgba(0, 0, 0, .87);
  margin: 12px 0;
  cursor: pointer;
}

.ziltag-ziltag-form footer p {
  font-size: 12px;
  color: rgba(0, 0, 0, .54);
}

.ziltag-ziltag-form footer a {
  text-decoration: underline;
  cursor: pointer;
}

.ziltag-ziltag-form footer .ziltag-ziltag-form__prompt {
  margin-left: 20px;
}

